// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cache Nodes are deleted when owner plugin changes 1`] = `
Map {
  "SitePage /dev-404-page/" => Object {
    "children": Array [],
    "id": "SitePage /dev-404-page/",
    "internal": Object {
      "contentDigest": "f91d29e10ba680b413138cf9ed86e655",
      "counter": 1,
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "parent": null,
    "path": "/dev-404-page/",
  },
  "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "internal": Object {
      "counter": 2,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin to add a 404 page in development with helpful information",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "dev-404-page",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "ssrAPIs": Array [],
  },
  "1fc32581-893a-55e8-8927-bcd667e2b700" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "internal": Object {
      "counter": 3,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin that handles loading Babel configs",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "load-babel-config",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "ssrAPIs": Array [],
  },
  "a5079d69-ba80-53dc-82f9-0f440bd5448c" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "internal": Object {
      "counter": 4,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "An internal Gatsby plugin which creates data nodes from internal data",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "internal-data-bridge",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "ssrAPIs": Array [],
  },
  "f795702c-a3b8-5a88-88ee-5d06019d44fa" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "internal": Object {
      "counter": 5,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin to detect various flavors of 404 pages and ensure there's a 404.html path created as well to ensure compatibility with static hosts",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "prod-404",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404",
    "ssrAPIs": Array [],
  },
  "6f4b2fa9-66b5-5205-a03f-140005a2cfe5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "internal": Object {
      "counter": 6,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "packageJson": Object {
      "author": "Chris Biscardi <chris@christopherbiscardi.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "An internal Gatsby plugin which handles configuring webpack to ensure theme components fall back from the user's site to theme modules.",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "webpack-theme-component-shadowing",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "ssrAPIs": Array [],
  },
  "04b300f8-40b1-51d3-9a79-3474d5bf24e0" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "04b300f8-40b1-51d3-9a79-3474d5bf24e0",
    "internal": Object {
      "counter": 7,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-x",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "packageJson": Object {
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "devDependencies": Array [],
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x",
    "ssrAPIs": Array [],
  },
  "437b6151-504d-51ee-b0bc-3447e87f9856" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "437b6151-504d-51ee-b0bc-3447e87f9856",
    "internal": Object {
      "counter": 8,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "cc7735e2-c2d3-5246-aa7d-80becac49c63" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "cc7735e2-c2d3-5246-aa7d-80becac49c63",
    "internal": Object {
      "counter": 9,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "ab5821ea-a83b-5db5-8c12-c907ae29a10d" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "ab5821ea-a83b-5db5-8c12-c907ae29a10d",
    "internal": Object {
      "counter": 10,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "1ed0b446-2f83-5083-9f9d-c0aa65d6ae86" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1ed0b446-2f83-5083-9f9d-c0aa65d6ae86",
    "internal": Object {
      "counter": 11,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "c32a230d-0d46-5579-bfb1-e7d8b78170dc" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c32a230d-0d46-5579-bfb1-e7d8b78170dc",
    "internal": Object {
      "counter": 12,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "55a76f83-22dd-5eb6-bd32-8c73a097e8c0" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "55a76f83-22dd-5eb6-bd32-8c73a097e8c0",
    "internal": Object {
      "counter": 13,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "7374ebf2-d961-52ee-92a2-c25e7cb387a9" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "internal": Object {
      "counter": 14,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "default-site-plugin",
    "nodeAPIs": Array [
      "onPreBootstrap",
      "onPostBootstrap",
    ],
    "packageJson": Object {
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.16.0",
        },
        Object {
          "name": "gray-percentage",
          "version": "^2.0.0",
        },
        Object {
          "name": "react",
          "version": "^16.8.0",
        },
        Object {
          "name": "react-dom",
          "version": "^16.8.0",
        },
      ],
      "description": "cache resilience tests",
      "devDependencies": Array [
        Object {
          "name": "babel-plugin-dynamic-import-node-sync",
          "version": "^2.0.1",
        },
        Object {
          "name": "jest",
          "version": "^24.0.0",
        },
        Object {
          "name": "jest-cli",
          "version": "^24.0.0",
        },
        Object {
          "name": "joi",
          "version": "^14.3.1",
        },
        Object {
          "name": "node-fetch",
          "version": "^2.6.0",
        },
      ],
      "license": "MIT",
      "name": "cache-resilience-tests",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience",
    "ssrAPIs": Array [],
  },
  "aac9adb8-13bf-5a63-bb97-98fa6f1551c6" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "aac9adb8-13bf-5a63-bb97-98fa6f1551c6",
    "internal": Object {
      "counter": 15,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "Site" => Object {
    "children": Array [],
    "host": undefined,
    "id": "Site",
    "internal": Object {
      "counter": 16,
      "owner": "internal-data-bridge",
      "type": "Site",
    },
    "parent": null,
    "pathPrefix": "",
    "polyfill": true,
    "port": undefined,
    "siteMetadata": Object {},
  },
  "TEST_NODE" => Object {
    "children": Array [],
    "id": "TEST_NODE",
    "internal": Object {
      "contentDigest": "0",
      "counter": 17,
      "owner": "gatsby-plugin-x",
      "type": "X",
    },
    "parent": null,
  },
  "SitePage /" => Object {
    "children": Array [],
    "component": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages/index.js",
    "componentChunkName": "component---src-pages-index-js",
    "componentPath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages/index.js",
    "context": Object {},
    "id": "SitePage /",
    "internal": Object {
      "contentDigest": "ea67288d2271ffd56ee868f599d81187",
      "counter": 18,
      "description": "437b6151-504d-51ee-b0bc-3447e87f9856",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "internalComponentName": "ComponentIndex",
    "isCreatedByStatefulCreatePages": true,
    "matchPath": undefined,
    "parent": null,
    "path": "/",
    "pluginCreatorId": "437b6151-504d-51ee-b0bc-3447e87f9856",
    "pluginCreator___NODE": "437b6151-504d-51ee-b0bc-3447e87f9856",
  },
}
`;

exports[`Cache Nodes are deleted when owner plugin changes 2`] = `
Map {
  "SitePage /dev-404-page/" => Object {
    "children": Array [],
    "id": "SitePage /dev-404-page/",
    "internal": Object {
      "contentDigest": "f91d29e10ba680b413138cf9ed86e655",
      "counter": 1,
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "parent": null,
    "path": "/dev-404-page/",
  },
  "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "d48d1c52-fe48-53cb-8f08-aa4b47dde5a5",
    "internal": Object {
      "counter": 2,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "dev-404-page",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin to add a 404 page in development with helpful information",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "dev-404-page",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page",
    "ssrAPIs": Array [],
  },
  "1fc32581-893a-55e8-8927-bcd667e2b700" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1fc32581-893a-55e8-8927-bcd667e2b700",
    "internal": Object {
      "counter": 3,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "load-babel-config",
    "nodeAPIs": Array [
      "onPreBootstrap",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin that handles loading Babel configs",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "load-babel-config",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config",
    "ssrAPIs": Array [],
  },
  "a5079d69-ba80-53dc-82f9-0f440bd5448c" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "a5079d69-ba80-53dc-82f9-0f440bd5448c",
    "internal": Object {
      "counter": 4,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "internal-data-bridge",
    "nodeAPIs": Array [
      "sourceNodes",
      "onCreatePage",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "An internal Gatsby plugin which creates data nodes from internal data",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "internal-data-bridge",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge",
    "ssrAPIs": Array [],
  },
  "f795702c-a3b8-5a88-88ee-5d06019d44fa" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "f795702c-a3b8-5a88-88ee-5d06019d44fa",
    "internal": Object {
      "counter": 5,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "prod-404",
    "nodeAPIs": Array [
      "onCreatePage",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "Internal plugin to detect various flavors of 404 pages and ensure there's a 404.html path created as well to ensure compatibility with static hosts",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "prod-404",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404",
    "ssrAPIs": Array [],
  },
  "6f4b2fa9-66b5-5205-a03f-140005a2cfe5" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "6f4b2fa9-66b5-5205-a03f-140005a2cfe5",
    "internal": Object {
      "counter": 6,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "webpack-theme-component-shadowing",
    "nodeAPIs": Array [
      "onCreateWebpackConfig",
    ],
    "packageJson": Object {
      "author": "Chris Biscardi <chris@christopherbiscardi.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "description": "An internal Gatsby plugin which handles configuring webpack to ensure theme components fall back from the user's site to theme modules.",
      "devDependencies": Array [],
      "license": "MIT",
      "main": "index.js",
      "name": "webpack-theme-component-shadowing",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
      "version": "1.0.0",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing",
    "ssrAPIs": Array [],
  },
  "04b300f8-40b1-51d3-9a79-3474d5bf24e0" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "04b300f8-40b1-51d3-9a79-3474d5bf24e0",
    "internal": Object {
      "counter": 7,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-x",
    "nodeAPIs": Array [
      "sourceNodes",
    ],
    "packageJson": Object {
      "bundledDependecies": Array [],
      "dependencies": Array [],
      "devDependencies": Array [],
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x",
    "ssrAPIs": Array [],
  },
  "437b6151-504d-51ee-b0bc-3447e87f9856" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "437b6151-504d-51ee-b0bc-3447e87f9856",
    "internal": Object {
      "counter": 8,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/dev-404-page/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "cc7735e2-c2d3-5246-aa7d-80becac49c63" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "cc7735e2-c2d3-5246-aa7d-80becac49c63",
    "internal": Object {
      "counter": 9,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/load-babel-config/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "ab5821ea-a83b-5db5-8c12-c907ae29a10d" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "ab5821ea-a83b-5db5-8c12-c907ae29a10d",
    "internal": Object {
      "counter": 10,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/internal-data-bridge/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "1ed0b446-2f83-5083-9f9d-c0aa65d6ae86" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "1ed0b446-2f83-5083-9f9d-c0aa65d6ae86",
    "internal": Object {
      "counter": 11,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/prod-404/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "c32a230d-0d46-5579-bfb1-e7d8b78170dc" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "c32a230d-0d46-5579-bfb1-e7d8b78170dc",
    "internal": Object {
      "counter": 12,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby/dist/internal-plugins/webpack-theme-component-shadowing/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "55a76f83-22dd-5eb6-bd32-8c73a097e8c0" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "55a76f83-22dd-5eb6-bd32-8c73a097e8c0",
    "internal": Object {
      "counter": 13,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/plugins/gatsby-plugin-x/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "7374ebf2-d961-52ee-92a2-c25e7cb387a9" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "7374ebf2-d961-52ee-92a2-c25e7cb387a9",
    "internal": Object {
      "counter": 14,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "default-site-plugin",
    "nodeAPIs": Array [
      "onPreBootstrap",
      "onPostBootstrap",
    ],
    "packageJson": Object {
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.16.0",
        },
        Object {
          "name": "gray-percentage",
          "version": "^2.0.0",
        },
        Object {
          "name": "react",
          "version": "^16.8.0",
        },
        Object {
          "name": "react-dom",
          "version": "^16.8.0",
        },
      ],
      "description": "cache resilience tests",
      "devDependencies": Array [
        Object {
          "name": "babel-plugin-dynamic-import-node-sync",
          "version": "^2.0.1",
        },
        Object {
          "name": "jest",
          "version": "^24.0.0",
        },
        Object {
          "name": "jest-cli",
          "version": "^24.0.0",
        },
        Object {
          "name": "joi",
          "version": "^14.3.1",
        },
        Object {
          "name": "node-fetch",
          "version": "^2.6.0",
        },
      ],
      "license": "MIT",
      "name": "cache-resilience-tests",
      "optionalDependecies": Array [],
      "peerDependencies": Array [],
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience",
    "pluginOptions": Object {
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience",
    "ssrAPIs": Array [],
  },
  "aac9adb8-13bf-5a63-bb97-98fa6f1551c6" => Object {
    "browserAPIs": Array [],
    "children": Array [],
    "id": "aac9adb8-13bf-5a63-bb97-98fa6f1551c6",
    "internal": Object {
      "counter": 15,
      "owner": "internal-data-bridge",
      "type": "SitePlugin",
    },
    "name": "gatsby-plugin-page-creator",
    "nodeAPIs": Array [
      "createPagesStatefully",
    ],
    "packageJson": Object {
      "author": "Kyle Mathews <mathews.kyle@gmail.com>",
      "bundledDependecies": Array [],
      "dependencies": Array [
        Object {
          "name": "@babel/runtime",
          "version": "^7.7.2",
        },
        Object {
          "name": "bluebird",
          "version": "^3.7.1",
        },
        Object {
          "name": "fs-exists-cached",
          "version": "^1.0.0",
        },
        Object {
          "name": "gatsby-page-utils",
          "version": "^0.0.31",
        },
        Object {
          "name": "glob",
          "version": "^7.1.6",
        },
        Object {
          "name": "lodash",
          "version": "^4.17.15",
        },
        Object {
          "name": "micromatch",
          "version": "^3.1.10",
        },
      ],
      "description": "Gatsby plugin that automatically creates pages from React components in specified directories",
      "devDependencies": Array [
        Object {
          "name": "@babel/cli",
          "version": "^7.7.0",
        },
        Object {
          "name": "@babel/core",
          "version": "^7.7.2",
        },
        Object {
          "name": "babel-preset-gatsby-package",
          "version": "^0.2.11",
        },
        Object {
          "name": "cross-env",
          "version": "^5.2.1",
        },
      ],
      "keywords": Array [
        "gatsby",
        "gatsby-plugin",
      ],
      "license": "MIT",
      "main": "index.js",
      "name": "gatsby-plugin-page-creator",
      "optionalDependecies": Array [],
      "peerDependencies": Array [
        Object {
          "name": "gatsby",
          "version": "^2.0.0",
        },
      ],
      "version": "2.1.31",
    },
    "parent": null,
    "pluginFilepath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "pluginOptions": Object {
      "path": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages",
      "pathCheck": false,
      "plugins": Array [],
    },
    "resolve": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/node_modules/gatsby-plugin-page-creator",
    "ssrAPIs": Array [],
  },
  "Site" => Object {
    "children": Array [],
    "host": undefined,
    "id": "Site",
    "internal": Object {
      "counter": 16,
      "owner": "internal-data-bridge",
      "type": "Site",
    },
    "parent": null,
    "pathPrefix": "",
    "polyfill": true,
    "port": undefined,
    "siteMetadata": Object {},
  },
  "SitePage /" => Object {
    "children": Array [],
    "component": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages/index.js",
    "componentChunkName": "component---src-pages-index-js",
    "componentPath": "/Users/sidharthachatterjee/Code/gatsby/integration-tests/cache-resilience/src/pages/index.js",
    "context": Object {},
    "id": "SitePage /",
    "internal": Object {
      "contentDigest": "ea67288d2271ffd56ee868f599d81187",
      "counter": 18,
      "description": "437b6151-504d-51ee-b0bc-3447e87f9856",
      "owner": "internal-data-bridge",
      "type": "SitePage",
    },
    "internalComponentName": "ComponentIndex",
    "isCreatedByStatefulCreatePages": true,
    "matchPath": undefined,
    "parent": null,
    "path": "/",
    "pluginCreatorId": "437b6151-504d-51ee-b0bc-3447e87f9856",
    "pluginCreator___NODE": "437b6151-504d-51ee-b0bc-3447e87f9856",
  },
}
`;
